welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
	while(!faceMur())
		avance()
}
